--- a/index.html
+++ b/index.html
@@ -282,12 +282,12 @@
     <section>
         <!--Головна секція-->
         <p class="parag">Experience Europe through our stories<br><br>
-            Is inquiry no he several excited am. 
+            <p>Is inquiry no he several excited am. 
 			Hard do me sigh with west same lady. 
 			Any delicate you how kindness horrible outlived servants. 
 			Do play they miss give so up. 
 			Took sold add play may none him few. 
-			In expression an solicitude principles in do
+		    In expression an solicitude principles in do</p>
         </p>
         <div class="mng">
             <div class="box"><img class="imgview" src="img/about.jpg">
